# opengl_RSM

./: CMakeLists.txt  LICENSE  README.md
includes/: camera.h  shader.h
includes/glad/: glad.h
lib/: glfw3.lib
src/: glad.c  rsm_main.cpp
src/shaders/: debug.frag  debug.vert  lightSpaceShader.frag  lightSpaceShader.vert  result_shader.frag  result_shader.vert
